syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.kastro";

package dev.kastro;

service ProductsService {
  rpc create (ProductServiceRequest) returns (ProductServiceResponse) {}
  rpc FindById (FindByIdServiceRequest) returns (ProductServiceResponse) {}
  rpc Update (ProductServiceUpdateResponse) returns (ProductServiceResponse) {}
}

message FindByIdServiceRequest {
  int64 id = 1;
}

message ProductServiceRequest {
  string name = 1;
  double price = 2;
  int32 quantity_in_stock = 3;
}

message ProductServiceResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stock = 4;
}

message ProductServiceUpdateResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stock = 4;
    }
